ci(seo): install jq for Pages status polling

--- a/.github/workflows/auto-seo.yml
+++ b/.github/workflows/auto-seo.yml
@@ -19,6 +19,8 @@ jobs:
           node-version: '18'
       - name: Install deps
         run: npm ci || true
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq || true
       - name: Run SEO scripts
         run: |
           node generate-sitemap.js
