🚀 SEO 최적화 완료: 8개 항목 전체 개선
✅ 주요 개선사항:
- NOINDEX 문제 해결: 7개 블로그 포스트에 robots 메타태그 추가
- 사이트맵 업데이트: 가상카드 페이지 포함
- 구조화 데이터 강화: AggregateRating, Review 스키마 추가
- 소셜 디버거 확장: Facebook, LinkedIn, Twitter 지원
- PWA 기능 향상: shortcuts, 카테고리 추가
- robots.txt 최적화: 검색엔진별 크롤링 설정
- 성능 최적화: FontAwesome preload, WebP 이미지
- 메타태그 완성: 모든 페이지 OG/Twitter Card 최적화

🎯 예상 효과:
- 검색 가시성 대폭 향상
- 리치 스니펫으로 클릭률 증가
- 소셜 미디어 공유 최적화
- 모바일 PWA 경험 개선

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -35,14 +35,18 @@ jobs:
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq || true
 
-      - name: Refresh social debuggers
+      - name: Refresh social debuggers and SEO crawlers
         env:
           SITE_DOMAIN: "https://pay24.store"
           FB_TOKEN: ${{ secrets.FB_APP_ACCESS_TOKEN }}
         run: |
           set -euo pipefail
-          echo "Collecting post URLs from posts.json"
+          echo "🔍 Collecting post URLs from posts.json"
           urls="$SITE_DOMAIN"
+          
+          # Add new visamastercard page
+          urls="$urls $SITE_DOMAIN/visamastercard/virtualvisa-prepaid"
+          
           if [ -f posts.json ]; then
             post_urls=$(jq -r '.[]?.url' posts.json || echo "")
             while read -r p; do
@@ -52,16 +56,42 @@ jobs:
               urls="$urls $SITE_DOMAIN$p"
             done <<< "$post_urls"
           fi
-          echo "Will refresh:" $urls
+          
+          echo "🚀 Will refresh these URLs:"
+          for u in $urls; do echo "   - $u"; done
+          
           for u in $urls; do
-            echo "Processing $u"
-            if [ -n "$FB_TOKEN" ]; then
-              echo "Triggering Facebook scrape for $u"
-              curl -s -X POST "https://graph.facebook.com" -d "id=$u" -d "scrape=true" -d "access_token=$FB_TOKEN" || true
+            echo "📄 Processing $u"
+            
+            # Facebook Open Graph scraping
+            if [ -n "${FB_TOKEN:-}" ]; then
+              echo "   📘 Facebook: Triggering OG scrape"
+              curl -s -X POST "https://graph.facebook.com" \
+                -d "id=$u" \
+                -d "scrape=true" \
+                -d "access_token=$FB_TOKEN" || echo "   ❌ Facebook scrape failed"
             else
-              echo "No FB token provided; skipping Facebook scrape"
+              echo "   ⏭️  Facebook: No token provided, skipping"
             fi
-            # Make a simple GET to encourage crawlers
-            curl -s -I "$u" -o /dev/null || true
-            sleep 1
+            
+            # LinkedIn post inspector refresh (no auth needed)
+            echo "   💼 LinkedIn: Triggering cache refresh"
+            curl -s -X POST "https://www.linkedin.com/post-inspector/inspect/" \
+              -d "url=$u" || echo "   ❌ LinkedIn refresh failed"
+            
+            # Twitter/X card validator refresh
+            echo "   🐦 Twitter: Triggering card refresh"
+            curl -s -I "https://cards-dev.twitter.com/validator" \
+              -H "Referer: $u" || echo "   ❌ Twitter refresh failed"
+            
+            # Encourage search engine crawling
+            echo "   🤖 Search Engines: Encouraging crawl"
+            curl -s -I "$u" \
+              -H "User-Agent: Mozilla/5.0 (compatible; SEO-Bot/1.0)" \
+              -o /dev/null || echo "   ❌ Crawl encouragement failed"
+            
+            # Rate limiting to be respectful
+            sleep 2
           done
+          
+          echo "✅ Social debugger refresh completed"
