🔧 자동 SEO 유지 관리 워크플로우 개선
- Node.js 버전 18  20 업그레이드 (안정성 향상)
- npm install  npm ci 변경 (더 빠르고 안정적인 설치)
- continue-on-error 추가: 한 단계 실패 시에도 계속 진행
- 스케줄 실행 추가: 매일 오전 9시 자동 실행
- 변경사항 감지 로직 개선: 더 정확한 파일 변경 확인
- 오류 처리 강화: push 실패 시에도 워크플로우 계속 진행
- 커밋 메시지에 [skip ci] 추가: 무한 루프 방지

--- a/.github/workflows/auto-optimize-and-sitemap.yml
+++ b/.github/workflows/auto-optimize-and-sitemap.yml
@@ -3,8 +3,9 @@ name: Auto optimize images & generate sitemap
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  schedule:
+    # 매일 오전 9시 (UTC) 실행
+    - cron: '0 0 * * *'
 
 jobs:
   build:
@@ -18,25 +19,34 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
+          cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
-
-      - name: Optimize images
-        run: npm run optimize:images
+        run: npm ci
 
       - name: Generate sitemap
         run: npm run generate:sitemap
+        continue-on-error: true
+
+      - name: Optimize images
+        run: npm run optimize:images
+        continue-on-error: true
+
+      - name: Check for changes
+        id: verify-changed-files
+        run: |
+          if [ -n "$(git status --porcelain)" ]; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "changed=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Commit generated assets
+        if: steps.verify-changed-files.outputs.changed == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add img/*.webp sitemap.xml || true
-          if ! git diff --staged --quiet; then
-            git commit -m "chore(ci): auto-generate images and sitemap" || echo "no changes to commit"
-            git push
-          else
-            echo "No generated changes to commit"
-          fi
+          git add -A
+          git commit -m "chore(ci): auto-generate sitemap and optimize images [skip ci]" || echo "No changes to commit"
+          git push || echo "Push failed, but continuing"
