🔧 자동 SEO 워크플로우 추가 안정화
- 타임아웃 설정: 10분 제한으로 무한 실행 방지
- 상세 로깅 추가: 각 단계별 진행 상황 출력 강화
- 의존성 설치 최적화: --prefer-offline --no-audit 플래그
- 변경 감지 로직 개선: git diff 명령어로 정확한 파일 변경 확인
- Git 설정 강화: --global 플래그로 설정 충돌 방지
- 커밋 전 검증 추가: 스테이징된 변경사항 확인 후 커밋
- 오류 처리 개선: 각 단계별 성공/실패 명확한 표시

--- a/.github/workflows/auto-optimize-and-sitemap.yml
+++ b/.github/workflows/auto-optimize-and-sitemap.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -23,30 +24,51 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci --prefer-offline --no-audit
+          echo "Dependencies installed successfully"
 
       - name: Generate sitemap
-        run: npm run generate:sitemap
+        run: |
+          echo "Starting sitemap generation..."
+          npm run generate:sitemap
+          echo "Sitemap generation completed"
         continue-on-error: true
 
       - name: Optimize images
-        run: npm run optimize:images
+        run: |
+          echo "Starting image optimization..."
+          npm run optimize:images
+          echo "Image optimization completed"
         continue-on-error: true
 
       - name: Check for changes
         id: verify-changed-files
         run: |
-          if [ -n "$(git status --porcelain)" ]; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-          else
+          echo "Checking for file changes..."
+          if git diff --quiet && git diff --staged --quiet; then
+            echo "No changes detected"
             echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "Changes detected"
+            echo "changed=true" >> $GITHUB_OUTPUT
           fi
 
       - name: Commit generated assets
         if: steps.verify-changed-files.outputs.changed == 'true'
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          echo "Committing changes..."
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add -A
-          git commit -m "chore(ci): auto-generate sitemap and optimize images [skip ci]" || echo "No changes to commit"
-          git push || echo "Push failed, but continuing"
+          if git diff --staged --quiet; then
+            echo "No staged changes to commit"
+            exit 0
+          fi
+          git commit -m "chore(ci): auto-generate sitemap and optimize images [skip ci]"
+          echo "Attempting to push changes..."
+          if git push; then
+            echo "Push successful"
+          else
+            echo "Push failed, but workflow continues"
+          fi
