--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "test": "echo \"Error: no test specified\" && exit 1",
   "build:css": "npx tailwindcss -i ./input.css -o ./css/tailwind.min.css --minify",
   "generate:sitemap": "node generate-sitemap.js",
+  "generate:rss": "node generate-rss.js",
   "optimize:images": "node scripts/optimize-images.js",
   "image-metadata": "node scripts/generate-image-metadata.js"
   },
