ci(seo): make all steps non-fatal and continue-on-error for Pages wait

--- a/.github/workflows/auto-seo.yml
+++ b/.github/workflows/auto-seo.yml
@@ -29,14 +29,9 @@ jobs:
           cache: 'npm'
       - name: Install deps
         run: |
-          set -e
           echo "Installing production deps..."
-          if npm ci --only=production --prefer-offline --no-audit; then
-            echo "npm ci ok"
-          else
-            echo "npm ci failed, trying npm install"
-            npm install --only=production --prefer-offline --no-audit || true
-          fi
+          npm ci --only=production --prefer-offline --no-audit || echo "npm ci failed"
+          npm install --only=production --prefer-offline --no-audit || echo "npm install failed (continuing)"
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq || true
       - name: Run SEO scripts
@@ -51,7 +46,6 @@ jobs:
       - name: Commit changes
         id: commit_push
         run: |
-          set -e
           echo "Configuring git..."
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -81,6 +75,7 @@ jobs:
             echo "changed=false" >> $GITHUB_OUTPUT
           fi
       - name: Wait for GitHub Pages deployment
+        continue-on-error: true
         if: steps.commit_push.outputs.pushed == 'true'
         env:
           REPO: ${{ github.repository }}
